XMLtoCSV/objects/unpackaged/objects/PCYC_Linked_Physician_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PCYC Linked Physician Configuration e.g. list of valid credentials</description>
    <fields>
        <fullName>PCYC_Credential_01__c</fullName>
        <defaultValue>&apos;NOT USED&apos;</defaultValue>
        <label>Credential #01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Credential_02__c</fullName>
        <defaultValue>&apos;NOT USED&apos;</defaultValue>
        <label>Credential #02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Credential_03__c</fullName>
        <defaultValue>&apos;NOT USED&apos;</defaultValue>
        <label>Credential #03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Linked Physician Settings</label>
</CustomObject>